--- a/Project_1B_Data_Modeling_with_Apache_Cassandra/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_Data_Modeling_with_Apache_Cassandra/Project_1B_ Project_Template.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -43,7 +43,8 @@
     "import glob\n",
     "import numpy as np\n",
     "import json\n",
-    "import csv"
+    "import csv\n",
+    "from prettytable import PrettyTable"
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -71,18 +72,17 @@
     }
    ],
    "source": [
-    "# checking your current working directory\n",
+    "# checking current working directory\n",
     "print(os.getcwd())\n",
     "\n",
-    "# Get your current folder and subfolder event data\n",
+    "# Get current folder and subfolder event data\n",
     "filepath = os.getcwd() + '/event_data'\n",
     "\n",
     "# Create a for loop to create a list of files and collect each filepath\n",
     "for root, dirs, files in os.walk(filepath):\n",
     "    \n",
     "# join the file path and roots with the subdirectories using glob\n",
-    "    file_path_list = glob.glob(os.path.join(root,'*'))\n",
-    "    #print(file_path_list)"
+    "    file_path_list = glob.glob(os.path.join(root,'*'))"
    ]
   },
   {
@@ -96,11 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8056\n"
+     ]
+    }
+   ],
    "source": [
     "# initiating an empty list of rows that will be generated from each file\n",
     "full_data_rows_list = [] \n",
@@ -119,13 +127,10 @@
     "            #print(line)\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
-    "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
-    "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "#print(full_data_rows_list)\n",
+    "# total number of rows \n",
+    "print(len(full_data_rows_list))\n",
     "\n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
-    "# Apache Cassandra tables\n",
+    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the Apache Cassandra tables\n",
     "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
     "\n",
     "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
@@ -140,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -205,15 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# This should make a connection to a Cassandra instance your local machine \n",
-    "# (127.0.0.1)\n",
-    "\n",
+    "# make a connection to a Cassandra instance your local machine (127.0.0.1)\n",
     "from cassandra.cluster import Cluster\n",
     "try: \n",
     "    cluster = Cluster(['127.0.0.1'])\n",
@@ -235,13 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
+    "# Create a Keyspace \n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS sparkify \n",
@@ -264,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('sparkify')\n",
     "except Exception as e:\n",
@@ -307,14 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
+    "## Query 1:  Give me the artist, song title and song's length in music app history that was heard during sessionId = 338, itemInSession = 4\n",
     "## composite primary key (session_id, item_in_session)\n",
     "\n",
     "query = \"CREATE TABLE IF NOT EXISTS sessions \"\n",
@@ -328,24 +330,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "# Set up the CSV file\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        ## Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO sessions (session_id, item_in_session, artist_name, song, length)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        \n",
+    "        ## Assigning which column elements should be mapped for each column in the INSERT statement\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {
     "editable": true,
     "scrolled": true
@@ -370,20 +372,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Faithless Music Matters (Mark Knight Dub) 495.30731201171875\n"
+      "+-----------+---------------------------------+--------------------+\n",
+      "|   Artist  |               Song              |       Length       |\n",
+      "+-----------+---------------------------------+--------------------+\n",
+      "| Faithless | Music Matters (Mark Knight Dub) | 495.30731201171875 |\n",
+      "+-----------+---------------------------------+--------------------+\n"
      ]
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Add in the SELECT statement to verify the data was entered into the table\n",
     "query = \"select artist_name, song, length from sessions WHERE session_id=338 AND item_in_session=4\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
+    "# use pretty table to display data in tabular form, including headings\n",
+    "t = PrettyTable(['Artist', 'Song', 'Length'])\n",
     "for row in rows:\n",
-    "    print (row.artist_name, row.song, row.length)"
+    "    t.add_row([row.artist_name, row.song, row.length])\n",
+    "print (t)"
    ]
   },
   {
@@ -397,14 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
+    "## Query 2: Retrieve name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "## composite primary key (user_id, session_id)\n",
     "## clustering column \"item_in_session\" will determine sort order in a partition\n",
     "\n",
@@ -419,35 +427,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "# Set up the CSV file\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        ## Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO user_sessions (user_id, session_id, artist_name, song, first_name, last_name, item_in_session)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        \n",
+    "        ## Assigning which column elements should be mapped for each column in the INSERT statement\n",
     "        session.execute(query, (int(line[10]), int(line[3]), line[0], line[9], line[1], line[4], int(line[8])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+-----------+----------+\n",
+      "| Artist | Song | FirstName | LastName |\n",
+      "+--------+------+-----------+----------+\n",
+      "+--------+------+-----------+----------+\n"
+     ]
+    }
+   ],
    "source": [
     "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
     "query = \"select artist_name, song, first_name, last_name from user_sessions WHERE user_id=10 AND session_id=182\"\n",
@@ -456,19 +475,22 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
+    "# use pretty table to display data in tabular form, including headings\n",
+    "t = PrettyTable(['Artist', 'Song', 'FirstName', 'LastName'])\n",
     "for row in rows:\n",
-    "    print (row.artist_name, row.song, row.length)"
+    "    t.add_row([row.artist_name, row.song, row.first_name, row.last_name])\n",
+    "print (t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "## composite primary key (song, user_id)\n",
     "## if only song is used as primary key, when multiple users listen to same song this would overwrite and end up storing only last record\n",
     "\n",
@@ -483,30 +505,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "# Set up the CSV file\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        ## Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO song_listeners (song, user_id, first_name, last_name)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        \n",
+    "        ## Assigning which column elements should be mapped for each column in the INSERT statement\n",
     "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -515,22 +537,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jacqueline Lynch\n",
-      "Tegan Levine\n",
-      "Sara Johnson\n"
+      "+------------+----------+\n",
+      "| FirstName  | LastName |\n",
+      "+------------+----------+\n",
+      "| Jacqueline |  Lynch   |\n",
+      "|   Tegan    |  Levine  |\n",
+      "|    Sara    | Johnson  |\n",
+      "+------------+----------+\n"
      ]
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Add in the SELECT statement to verify the data was entered into the table\n",
     "query = \"select first_name, last_name from song_listeners WHERE song='All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
+    "# use pretty table to display data in tabular form, including headings\n",
+    "t = PrettyTable(['FirstName', 'LastName'])\n",
     "for row in rows:\n",
-    "    print (row.first_name, row.last_name)"
+    "    t.add_row([row.first_name, row.last_name])\n",
+    "print (t)"
    ]
   },
   {
@@ -544,13 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions\n",
+    "## Drop the table before closing out the session\n",
     "query = \"DROP TABLE IF EXISTS sessions\"\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -560,13 +589,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions\n",
+    "## Drop the table before closing out the session\n",
     "query = \"DROP TABLE IF EXISTS user_sessions\"\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -576,13 +605,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions\n",
+    "## Drop the table before closing out the session\n",
     "query = \"DROP TABLE IF EXISTS song_listeners\"\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -601,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
